# journal-abbrev

./: README.md  Sources.txt  setup.cfg
src/journalabbrev/: __init__.py  common.py  db.py  fetcher.py  pdf.py  unicode.py
src/journalabbrev_cli/: common.py  db.py  journal_abbrev_bib.py  journal_db.py
