[metadata]
name = journal-abbrev
version = 0.1.0
description = Tools for working with abbreviations of academic journal names
long_description = file: README.rst
url = https://github.com/alexreg/journal-abbrev
author = Alexander W. Regueiro
author_email = alexreg@gmail.ccom
license = BSD 3-Clause License
license_file = LICENSE.txt
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Natural Language :: English
	Programming Language :: Python
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.9
	Topic :: Database
	Topic :: Text Processing
	Topic :: Text Processing :: Markup :: LaTeX
	Topic :: Utilities
	Typing :: Typed
keywords =
	tool
	databases
	academic journals
	bibliographies

[options]
zip_safe = false
include_package_data = true
package_dir =
	=src/
packages = find:
python_requires = ~= 3.9
install_requires =
	beautifulsoup4 ~= 4.9
	bibtexparser ~= 1.2
	deepmerge ~= 0.3
	fuzzywuzzy ~= 0.18
	json5 ~= 0.9
	more-itertools ~= 8.7
	msgpack ~= 1.0
	pdfplumber ~= 0.5
	progressbar2 ~= 3.53
	pymitter ~= 0.3
	pywikibot ~= 6.5
	requests ~= 2.26
	rocksdb ~= 0.7
	varname ~= 0.8

[options.entry_points]
console_scripts =
	journal-db = journalabbrev_cli.journal_db:main
	journal-abbrev-bib = journalabbrev_cli.journal_abbrev_bib:main

[options.packages.find]
where = src/
